--- a/css/style.css
+++ b/css/style.css
@@ -1,52 +1,140 @@
 @import url("https://fonts.googleapis.com/css?family=Oswald:400,600|Sacramento|Source+Sans+Pro:300&subset=latin-ext");
 /* Variables */
 /* Global */
-*, *::before, *::after { box-sizing: border-box; }
+*, *::before, *::after {
+  box-sizing: border-box;
+}
 
-body { background: #fff; font-family: "Source Sans Pro", sans-serif; color: #444; font-weight: 300; font-size: 16px; line-height: 1.7; }
+body {
+  background: #fff;
+  font-family: "Source Sans Pro", sans-serif;
+  color: #444;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 1.7;
+}
 
-.container { max-width: 1140px; margin: 0 auto; }
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
+}
 
-.section-title { font-size: 22px; text-transform: uppercase; font-family: "Oswald", sans-serif; font-weight: 600; }
+.section-title {
+  font-size: 22px;
+  text-transform: uppercase;
+  font-family: "Oswald", sans-serif;
+  font-weight: 600;
+}
 
-.section-title span { text-transform: none; font-weight: 400; color: #777777; }
+.section-title span {
+  text-transform: none;
+  font-weight: 400;
+  color: #777777;
+}
 
 /* Layout */
-.wrapper { display: -ms-flexbox; display: flex; margin-left: 10px; }
+.wrapper {
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 10px;
+}
 
-.sidebar { -ms-flex: 1 0 0px; flex: 1 0 0; }
+.sidebar {
+  -ms-flex: 1 0 0px;
+      flex: 1 0 0;
+}
 
-.posts { -ms-flex: 2 0 0px; flex: 2 0 0; }
+.posts {
+  -ms-flex: 2 0 0px;
+      flex: 2 0 0;
+}
 
-.sidebar, .posts { background: #fff; margin-right: 10px; padding: 40px; border: 1px solid #444; border-radius: 5px; }
+.sidebar, .posts {
+  background: #fff;
+  margin-right: 10px;
+  padding: 40px;
+  border: 1px solid #444;
+  border-radius: 5px;
+}
 
 /* Logo */
-.logo { font-family: "Sacramento", cursive; font-weight: 400; font-size: 104px; line-height: 1; text-align: center; }
+.logo {
+  font-family: "Sacramento", cursive;
+  font-weight: 400;
+  font-size: 104px;
+  line-height: 1;
+  text-align: center;
+}
 
 /* Lists */
-.list { list-style-type: none; margin: 0; padding: 0; }
+.list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 
-.list .active { font-weight: bold; }
+.list .active {
+  font-weight: bold;
+}
 
-.list-horizontal li { display: inline-block; }
+.list-horizontal li {
+  display: inline-block;
+}
 
 /* Authors */
-.authors li { margin-bottom: 12px; }
+.authors li {
+  margin-bottom: 12px;
+}
 
 /* Post */
-.post { display: none; }
+.post {
+  display: none;
+}
 
-.post.active { display: block; }
+.post.active {
+  display: block;
+}
 
-.post-author { font-style: italic; }
+.post-author {
+  font-style: italic;
+}
 
-.post-tags { display: -ms-flexbox; display: flex; }
+.post-tags {
+  display: -ms-flexbox;
+  display: flex;
+}
 
-.post-tags p { margin: 0 10px 0 0; }
+.post-tags p {
+  margin: 0 10px 0 0;
+}
+
 /* Tags */
-.tag-size-1 {font-size: 15px; color: rgb(3, 77, 3); }
-.tag-size-2 {font-size: 20px; color: rgb(12, 184, 12);}
-.tag-size-3 {font-size: 26px; color: rgb(114, 212, 90);}
-.tag-size-4 {font-size: 33px; color: rgb(201, 156, 9) ;}
-.tag-size-5 {font-size: 40px; color: rgb(224, 212, 35);}
-.list.tags li {display: inline;}
+.tag-size-1 {
+  font-size: 15px;
+  color: #034d03;
+}
+
+.tag-size-2 {
+  font-size: 20px;
+  color: #0cb80c;
+}
+
+.tag-size-3 {
+  font-size: 26px;
+  color: #72d45a;
+}
+
+.tag-size-4 {
+  font-size: 33px;
+  color: #c99c09;
+}
+
+.tag-size-5 {
+  font-size: 40px;
+  color: #e0d423;
+}
+
+.list.tags li {
+  display: inline;
+}
+/*# sourceMappingURL=style.css.map */
